fixed video on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -94,5 +94,9 @@ html{
     background: #c7dddb;
 }
 
+video {
+	width: 100%;
+}
+
 /* End Dropdown Menu Styles */	
 
