--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
 	z-index: -1;
 
 }
+video {
+	width: 100%;
+}
 
 #contact img{
 	height:30px;
